# f-pacs

./: Cargo.toml  README.md  f-pacs
src/: main.rs  structs.rs
src/crypto/: mod.rs  shares.rs  signatures.rs
